[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
strum_macros = "0.25.3"
strum = "0.25.0"
lazy_static = "1.4.0"
itertools = "0.12.0"
regex = "1.10.2"
aho-corasick = "1.1.2"
multiset = "0.0.5"
sorted-vec = "0.8.3"
lazy-regex = "3.1.0"
ndarray = "0.15.6"
indoc = "2.0.4"
num-traits = "0.2.17"
num-integer = "0.1.45"
rustc-hash = "1.1.0"
rayon = "1.8.0"
